# disaster-tweet-classifier

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  dvc.yaml  infer.py  pyproject.toml
artifacts/submissions/: bertweet_submission.csv
configs/: config.yaml
configs/data/: kaggle_disaster_tweets.yaml
configs/export/: onnx.yaml  tensorrt.yaml
configs/inference/: default.yaml
configs/logging/: mlflow.yaml
configs/model/: baseline_logreg.yaml  bertweet.yaml
configs/preprocessing/: baseline.yaml  bertweet.yaml
configs/serving/: fastapi.yaml
configs/training/: baseline.yaml  bertweet.yaml  default.yaml
data/examples/: inference_examples.csv
data/raw/: sample_submission.csv.dvc  test.csv.dvc  train.csv.dvc
disaster_tweet_classifier/: commands.py
disaster_tweet_classifier/api/: app.py  schemas.py
disaster_tweet_classifier/data/: lightning_datamodule.py  loading.py  splitting.py  torch_datasets.py  validation.py
disaster_tweet_classifier/inference/: model_service.py  onnx_export.py  predictor.py
disaster_tweet_classifier/models/: baseline.py  transformer_classifier.py
disaster_tweet_classifier/preprocessing/: datasets.py  text_cleaning.py
disaster_tweet_classifier/tracking/: git.py  mlflow_tracking.py
disaster_tweet_classifier/training/: baseline_trainer.py  metrics.py  plots.py  transformer_trainer.py
disaster_tweet_classifier/utils/: serialization.py
tests/: api.py  test_api.py  test_baseline_training.py  test_config.py  test_data_validation.py  test_splitting.py  test_text_cleaning.py  test_torch_dataset.py  test_tracking.py  test_training_plots.py
tests/api/: test_app.py
