[project]
name = "disaster-tweet-classifier"
version = "0.1.0"
description = "MLOps project for classifying disaster-related tweets using classical ML and BERTweet."
readme = "README.md"
requires-python = ">=3.11,<3.12"
authors = [
    { name = "Gor Aperyan" }
]

dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "pydantic>=2.8.0,<3.0.0",
    "pydantic-settings>=2.4.0,<3.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "hydra-core>=1.3.2,<2.0.0",
    "omegaconf>=2.3.0,<3.0.0",
    "fire>=0.6.0,<1.0.0",
    "rich>=13.7.0,<14.0.0",
    "numpy>=1.26.0,<2.0.0",
    "pandas>=2.2.0,<3.0.0",
    "scikit-learn>=1.5.0,<2.0.0",
    "torch>=2.3.0,<3.0.0",
    "lightning>=2.4.0,<3.0.0",
    "torchmetrics>=1.4.0,<2.0.0",
    "transformers>=4.44.0,<5.0.0",
    "emoji>=2.12.0,<3.0.0",
    "accelerate>=0.34.0,<2.0.0",
    "joblib>=1.4.0,<2.0.0",
    "mlflow>=2.16.0,<3.0.0",
    "matplotlib>=3.9.0,<4.0.0",
    "dvc>=3.55.0,<4.0.0",
    "tqdm>=4.66.0,<5.0.0",
]

[project.scripts]
disaster-tweet = "disaster_tweet_classifier.commands:main"

[dependency-groups]
dev = [
    "pytest>=8.3.0,<9.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "ruff>=0.6.0,<1.0.0",
    "pre-commit>=3.8.0,<4.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["disaster_tweet_classifier", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "N",
    "S",
    "C4",
    "SIM",
    "RUF",
]
ignore = [
    "S101",
    "RUF100"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
